--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 <body>
     <header class="hero">
         <div class="logo-nav-container">
-            <img class="logo" src="img/Cordilleralogo.png" alt="Logo Cordillera">
+            <img class="logo" src="https://clorostica.github.io/Cordillera/img/Cordilleralogo.png" alt="Logo Cordillera">
             <nav class="nav" id="nav">
     <button class="close-menu" id="close">✖</button>
                 <ul>
