--- a/index.html
+++ b/index.html
@@ -281,19 +281,19 @@
             <div class="about__main">
                 <article class="about__icons">
                     <h3 class="icon_title">Extra-frische Blumen</h3>
-                    <img class="icon" src="img/hand-thumbs-up.svg" alt="icon" width="100" height="100">
+                    <img class="icon" src="https://clorostica.github.io/Cordillera/img/hand-thumbs-up.svg" alt="icon" width="100" height="100">
                 </article>
                 <article class="about__icons">
                     <h3 class="icon_title">30% weniger Abfall</h3>
-                    <img class="icon" src="img/trash3.svg" alt="icon" width="100" height="100">
+                    <img class="icon" src="https://clorostica.github.io/Cordillera/img/trash3.svg" alt="icon" width="100" height="100">
                 </article>
                 <article class="about__icons">
                     <h3 class="icon_title">Schneller Versand</h3>
-                    <img class="icon" src="img/flower1.svg" alt="icon" width="100" height="100">
+                    <img class="icon" src="https://clorostica.github.io/Cordillera/img/flower1.svg" alt="icon" width="100" height="100">
                 </article>
                 <article class="about__icons">
                     <h3 class="about_title">Faire Preise für Züchter</h3>
-                    <img class="icon" src="img/truck.svg" alt="icon" width="100" height="100">
+                    <img class="icon" src="https://clorostica.github.io/Cordillera/img/truck.svg" alt="icon" width="100" height="100">
                 </article>
             </div>
         </div>
