--- a/index.html
+++ b/index.html
@@ -237,7 +237,7 @@
       <h3 class="question-title">
         Wie funktioniert die Rückgabe?
         <span class="question-arrow">
-          <img src="/img/arrow.svg" class="question-img">
+          <img src="https://clorostica.github.io/Cordillera/img/arrow.svg" class="question-img">
         </span>
       </h3>
     </div>
