--- a/index.html
+++ b/index.html
@@ -223,7 +223,7 @@
       <h3 class="question-title">
         Wie kann ich bestellen?
         <span class="question-arrow">
-          <img src="/img/arrow.svg" class="question-img">
+          <img src="https://clorostica.github.io/Cordillera/img/arrow.svg" class="question-img">
         </span>
       </h3>
     </div>
@@ -251,7 +251,7 @@
       <h3 class="question-title">
         Wie viel kostet die Lieferung?
         <span class="question-arrow">
-          <img src="/img/arrow.svg" class="question-img">
+          <img src="https://clorostica.github.io/Cordillera/img/arrow.svg" class="question-img">
         </span>
       </h3>
     </div>
